<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_sync"
        android:icon="@drawable/ic_sync_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_sync"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_return"
        android:icon="@drawable/ic_reply_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_return"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share_link"
        android:orderInCategory="100"
        android:title="@string/action_share_link"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_open_in_browser"
        android:orderInCategory="100"
        android:title="@string/action_open_in_browser"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share_app"
        android:orderInCategory="100"
        android:title="@string/action_share_app"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_comment"
        android:orderInCategory="100"
        android:title="@string/action_comment"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        app:showAsAction="never" />
</menu>
